--- a/Git/hello.html
+++ b/Git/hello.html
@@ -8,6 +8,7 @@
     <body>
         <h1>Wellcome to my page</h1>
         <h1>Xin chao cac ban nhe</h1>
+        <h2>My name is Thinh</h2>
         Hello World Thinh!
     </body>
 </html>
