--- a/Git/hello.html
+++ b/Git/hello.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Wellcome to my page</h1>
-        <h1>Xin chao cac ban nhe</h1>
+        <h1>My name is Thinh</h1>
         Hello World Thinh!
     </body>
 </html>
