--- a/Git/hello.html
+++ b/Git/hello.html
@@ -4,10 +4,15 @@
         <title>
             Hello
         </title>
+        <style>
+            h1{
+                color: blue;
+            }
+        </style>
     </head>
     <body>
         <h1>Wellcome to my page!</h1>
-        <h1> style = "<color:blue;"> Wellcome to my page</h1>
+        <h1> Wellcome to my page</h1>
         <h1>My name is Thinh</h1>
         Hello World Thinh!
     </body>
