--- a/User Interface/src/React/react.html
+++ b/User Interface/src/React/react.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Animate</title>
+    <title>React</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
-  
-    <!-- Load our React component. -->
-    <script src="like_button.js"></script>
 </head>
 <body>
-    <button>Click here!</button>
     
-    <h1>Wellcome!</h1>
-    <div>Thinhle</div>
+    
 </body>
 </html>
